Faire du HTML : mon projet professionnel

--- a/tests/vendredi_v2.html
+++ b/tests/vendredi_v2.html
@@ -592,7 +592,7 @@
 					<div>
 						<div class="debut heure">17h30</div>
 						<div class="salle heure">S1</div>
-						<a href="https://app.klaxoon.com/userspace/networks/appel-a-orateurs-agile-tour-rennes-2019/articles/lethique-et-les-tocs-du-product-owner">
+						<a href="#" class="portfolio-link" data-toggle="modal" data-target="#modal-lethique-et-les-tocs-du-product-owner">
 							<div class="parent grid-item--height4">
 								<div class="enfant">
 									<h3>L'éthique et les TOCs du product owner</h3>
@@ -607,7 +607,7 @@
 					<div>
 						<div class="debut heure">17h30</div>
 						<div class="salle heure">S2</div>
-						<a href="https://app.klaxoon.com/userspace/networks/appel-a-orateurs-agile-tour-rennes-2019/articles/from-devops-to-zero-ou-comment-foirer-son-product-management">
+						<a href="#" class="portfolio-link" data-toggle="modal" data-target="#modal-from-devops-to-zero-ou-comment-foirer-son-product-management">
 							<div class="parent grid-item--height2">
 								<div class="enfant">
 									<h3>From devops to zero ou comment foirer son product management</h3>
@@ -618,6 +618,7 @@
 						<div class="fin heure">18h00</div>
 					</div>
 				</div>
+
 				<div class="grid-item grid-item--height4 c4 PM4 CF" style="position: absolute; left: 49.8%; top: 1470px; opacity: 1; width: 16.4%; transition-property: opacity, transform; transition-duration: 0.4s; transition-delay: 0ms; transform: translate3d(-0.001px, 0px, 0px);">
 					<div>
 						<div class="debut heure">17h30</div>
@@ -870,6 +871,64 @@
 					<p style="text-align: justify">
 						Je suis coach organisationnel et formateur avec 15 années d’expérience aussi bien en France qu'au Canada. Je suis également l’auteur du Guide de la transformation organisationnelle à l’usage des managers et dirigeants ainsi que de nombreux articles publiés chez Forbes, Les Echos, l’Usine Digitale ou encore le Journal du Net
 					</p>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<div class="modal fade" id="modal-lethique-et-les-tocs-du-product-owner" tabindex="-1" role="dialog" aria-labelledby="#modal-lethique-et-les-tocs-du-product-owner-label"
+		 aria-hidden="true">
+		<div class="modal-dialog modal-lg" role="document">
+			<div class="modal-content">
+				<div class="modal-body">
+					<div style="display: flex; justify-content: space-between">
+						<h2>L'éthique et les TOCs du product owner</h2>
+						<a href="#" data-dismiss="modal">X</a>
+					</div>
+					<hr/>
+					<div style="display:flex">
+						<div class="CF" style="width:2rem">&nbsp;</div>
+						<div style="margin-left:1rem">Conférence</div>
+					</div>
+					<hr/>
+					<p style="text-align: justify">Peut-être avez vous participé à un projet où les demandes s'accumulent. Le backlog produit grandit plus vite que ce que l'équipe n'est en capacité de traiter.<br>La solution est évidente : \"Il faut prioriser !\"<br>En théorie, nous avons notre product owner, légitime et disponible qui va s'appuyer sur sa vision et sa stratégie pour orienter l'équipe et choisir parmi les différentes options.<br>Dans la pratique, cette tâche s'avère complexe et parfois douloureuse.<br>Comment aider le product owner à faire puis à communiquer ses choix sans tomber dans les pièges de l'effet Pavarotti (On sert en priorité la personne qui parle le plus fort) ou HIPPO (Highest Paid Person’s Opinion) ou de la non-décision ?<br>Et si on abordait le sujet avec un prisme différent, celui de la philosophie morale.<br>Cette conférence/atelier sera l'occasion d'échanger et d'expérimenter cette approche et un outil pratique.</p>
+					<hr/>
+
+					<div>
+						<img src="orateurs/julien-fallet.JPG" style="height:8rem"/>
+						Julien FALLET - <a href="https://twitter.com/jfallet">@jfallet</a>
+					</div>
+					<br/>
+					<p style="text-align: justify">
+						2009, Eurêka ! l'agilité se révèle être un état d'esprit qui m'anime et me permet de progresser en respectant mes valeurs. Convaincu par cette approche centrée sur l'humain, je m'attache à participer à la construction d’écosystèmes misant sur la force du collectif.
+						Depuis 2018, en tant que Coach agile, facilitateur et formateur, je me suis associe à l'aventure Kokan, une équipe de passionnés d'intelligence collective et de collaboration qui propose son aide pour faire du changement une opportunité concurrentielle plus qu'un frein à la nouveauté.
+					</p>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<div class="modal fade" id="modal-from-devops-to-zero-ou-comment-foirer-son-product-management" tabindex="-1" role="dialog" aria-labelledby="#modal-from-devops-to-zero-ou-comment-foirer-son-product-management-label"
+		 aria-hidden="true">
+		<div class="modal-dialog modal-lg" role="document">
+			<div class="modal-content">
+				<div class="modal-body">
+					<div style="display: flex; justify-content: space-between">
+						<h2>From devops to zero ou comment foirer son product management</h2>
+						<a href="#" data-dismiss="modal">X</a>
+					</div>
+					<hr/>
+					<div style="display:flex">
+						<div class="RE" style="width:2rem">&nbsp;</div>
+						<div style="margin-left:1rem">Retour d'expérience</div>
+					</div>
+					<hr/>
+					<p style="text-align: justify">Être devops ou ne pas l'être, telle n'est plus la question. Je vous propose à travers ce retex un partage autour de la transformation devops d'une équipe avec le prisme d'un product manager. Comment continuer à produire de la valeur, absorber sa dette et effectuer sa transformation devops ?</p>
+					<hr/>
+
+					<div>
+						Haja Rambelontsalama - <a href="https://twitter.com/hrambelo">@hrambelo</a>
+					</div>
 				</div>
 			</div>
 		</div>
