deux talks du samedi matin

--- a/tests/samedi_v2.html
+++ b/tests/samedi_v2.html
@@ -271,11 +271,11 @@
 						<div class="fin heure">12h40</div>
 					</div>
 				</div>
-				<div class="grid-item grid-item--height6 c3 AM2 CF" style="position: absolute; left: 33.1987%; top: 442px; opacity: 1; width: 16.4%; transition-property: opacity, transform; transition-duration: 0.4s; transition-delay: 0ms; transform: translate3d(-0.001px, 0px, 0px);">
+				<div class="grid-item grid-item--height6 c3 AM2 AJ" style="position: absolute; left: 33.1987%; top: 442px; opacity: 1; width: 16.4%; transition-property: opacity, transform; transition-duration: 0.4s; transition-delay: 0ms; transform: translate3d(-0.001px, 0px, 0px);">
 					<div>
 						<div class="debut heure">10h50</div>
 						<div class="salle heure">S2</div>
-						<a href="https://app.klaxoon.com/userspace/networks/appel-a-orateurs-agile-tour-rennes-2019/articles/le-defi-collaboratif-lego-testez-votre-agilite-collective">
+						<a href="#" class="portfolio-link" data-toggle="modal" data-target="#modal-le-defi-collaboratif-lego-testez-votre-agilite-collective">
 							<div class="parent grid-item--height6">
 								<div class="enfant">
 									<h3>Le défi collaboratif Lego - Testez votre agilité collective !</h3>
@@ -290,7 +290,7 @@
 					<div>
 						<div class="debut heure">10h50</div>
 						<div class="salle heure">S3</div>
-						<a href="https://app.klaxoon.com/userspace/networks/appel-a-orateurs-agile-tour-rennes-2019/articles/une-vision-du-sport-de-haut-niveau-par-un-praticien-assidu">
+						<a href="#" class="portfolio-link" data-toggle="modal" data-target="#modal-une-vision-du-sport-de-haut-niveau-par-un-praticien-assidu">
 							<div class="parent grid-item--height3">
 								<div class="enfant">
 									<h3>Une vision du sport de haut-niveau par un praticien assidu</h3>
@@ -766,7 +766,7 @@
 					<hr/>
 					<div>
 						<img src="orateurs/carole-v.jpg" style="height:8rem"/>
-						Carole Vinerier - <a href="https://twitter.com/DenisMigot">@CaroleVinerier</a>
+						Carole Vinerier - <a href="https://twitter.com/CaroleVinerier">@CaroleVinerier</a>
 					</div>
 					<br/>
 					<p style="text-align: justify">
@@ -775,6 +775,77 @@
 					<p style="text-align: justify">
 						Pour une entreprise plus humaine, axée sur le sens.
 					</p>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<div class="modal fade" id="modal-le-defi-collaboratif-lego-testez-votre-agilite-collective" tabindex="-1" role="dialog" aria-labelledby="#modal-le-defi-collaboratif-lego-testez-votre-agilite-collective-label"
+		 aria-hidden="true">
+		<div class="modal-dialog modal-lg" role="document">
+			<div class="modal-content">
+				<div class="modal-body">
+					<div style="display: flex; justify-content: space-between">
+						<h2>Le Défi Collaboratif Lego - Testez votre agilité collective !</h2>
+						<a href="#" data-dismiss="modal">X</a>
+					</div>
+					<hr/>
+					<div style="display:flex">
+						<div class="AJ" style="width:2rem">&nbsp;</div>
+						<div style="margin-left:1rem">Atelier / Jeu</div>
+					</div>
+					<hr/>
+					<p style="text-align: justify">
+						Vous connaissez le principe des réactions en chaîne ? Chaque maillon est essentiel au bon déroulé de la réaction complète. Comme dans une entreprise où, de l'agent d'entretien au dirigeant, chacun à un rôle à jouer pour atteindre un objectif commun, vous vivrez cela lors du Défi Collaboratif Lego. Les grand principes de l'agilité seront mis en pratique de façon ludique, ce qui rend cet atelier unique accessible au novice comme à l'expert de l'Agilité.
+					</p>
+					<hr/>
+					<div>
+						Damien Roquel
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<div class="modal fade" id="modal-une-vision-du-sport-de-haut-niveau-par-un-praticien-assidu" tabindex="-1" role="dialog" aria-labelledby="#modal-une-vision-du-sport-de-haut-niveau-par-un-praticien-assidu-label"
+		 aria-hidden="true">
+		<div class="modal-dialog modal-lg" role="document">
+			<div class="modal-content">
+				<div class="modal-body">
+					<div style="display: flex; justify-content: space-between">
+						<h2>Une vision du sport de haut-niveau par un praticien assidu</h2>
+						<a href="#" data-dismiss="modal">X</a>
+					</div>
+					<hr/>
+					<div style="display:flex">
+						<div class="CF" style="width:2rem">&nbsp;</div>
+						<div style="margin-left:1rem">Conférence</div>
+					</div>
+					<hr/>
+					<p style="text-align: justify">
+						Le sport de haut niveau est un modèle parmi d'autres inspirant les pratiques agiles. Mais lorsque l'on évoque la performance collective, ce modèle devient d'autant plus inspirant.Nous vous proposons donc de recueillir le retour croisé de Camille - sportif & entraîneur évoluant dans le haut niveau depuis près de 10 ans - et Guillaume - ancien sportif, aujourd'hui architecte fonctionnel / pompier projet - depuis leur sport commun : le Kayak Polo.Au cours de cette conférence, nous vous parlerons : performance collective, équipe, profils, rôles, valeurs, ... et adaptation dans des contextes de projets informatiques.
+					</p>
+					<br/>
+					<hr/>
+					<div>
+						<img src="orateurs/guillaume-poupa.jpg" style="height:8rem"/>
+						Guillaume Poupa - <a href="https://twitter.com/poupa_g">@poupa_g</a>
+					</div>
+					<br/>
+					<p style="text-align: justify">
+						Guillaume Poupa, 32 ans, je suis architecte fonctionnel chez Orange Business Services depuis 10 ans. Touche à tout sportif, j'ai pratiqué le kayak polo pendant 15 ans, côtoyant et affrontant Camille - à l'époque - aux portes du haut-niveau et l'encourageant lors de ses premiers pas en équipe de France. J'interviens aujourd'hui sur les projets dans un rôle de "pompier" où face aux difficultés d'une équipe, j'apporte mon expertise méthodologique et le résultat de mon expérience, forgée par mon vécu et mes observations tant sportifs que professionnels.
+						C'est donc tout naturellement qu'au détour d'une station essence, j'ai croisé Camille et lui ai demandé "tu connais l'agile tour, ..."
+					</p>
+					<hr/>
+					<div>
+						<img src="orateurs/camille-richer.jpg" style="height:8rem"/>
+						Camille Richer
+					</div>
+					<br/>
+					<p style="text-align: justify">
+						Camille Richer, 27 ans, je suis professeur de sport diplômé de l'INSEP (PSHN) détaché auprès de la fédération française de Canoë Kayak en tant que Conseillé Technique Régional. En parallèle, je poursuis ma carrière d'entraineur/joueur de kayak polo au Club de Saint-Grégoire au plus haut niveau. J'accompagne également les athlètes de ma fédération dans leurs préparations physiques et mentales toutes disciplines confondues.
+					</p>
+					<hr/>
 				</div>
 			</div>
 		</div>
