Correction programme vendredi

--- a/tests/vendredi_v2.html
+++ b/tests/vendredi_v2.html
@@ -899,18 +899,9 @@ Mon but est d'accompagner tout le monde afin d’élever le niveau.
 						<br>Il s’agit d’abord de comprendre les processus dysfonctionnels relationnels. Ensuite, d’adopter une stratégie spécifique d’amélioration de la situation.
 						<br>Nous utiliserons pour cela une grille de représentation des interactions et des boucles de feedback. Nous verrons en particulier comment la compréhension des tentatives de solutions infructueuses nous amènera à proposer des prescriptions paradoxales.
 						<br>Découvrez le réducteur de complexité proposé par le modèle de Palo-Alto et l’apport fondamental que constitue l’approche stratégique.
-						<br>Vous êtes familier de l’agilité, mais vous ne connaissez pas la systémique. Le manifeste agile mentionne l’importance privilégiée à accorder aux \"Individus et à leurs interactions\". Le modèle de Palo-Alto propose justement une démarche stratégique focalisée sur l’aspect interactionnel des dysfonctionnements.
+						<br>Vous êtes familier de l’agilité, mais vous ne connaissez pas la systémique. Le manifeste agile mentionne l’importance privilégiée à accorder aux "Individus et à leurs interactions". Le modèle de Palo-Alto propose justement une démarche stratégique focalisée sur l’aspect interactionnel des dysfonctionnements.
 						<br>Vous ne connaissez ni la systémique, ni l’agilité, mais vous êtes curieux d’en savoir plus sur une démarche non normative, considérant que tout problème est une question de perception de sa relation à soi-même, aux autres ou au monde. Venez découvrir en pratiquant sur des cas du monde de l’entreprise.
 					</p>
-					<p style="text-align: justify">Conférence (présentation des concepts)</p>
-					<p style="text-align: justify">Atelier : étude d'un premier cas ensemble</p>
-					<p style="text-align: justify">puis étude d'un 2ème cas en sous-groupes</p>
-					<p style="text-align: justify">Objectifs :&nbsp;</p>
-					<ul>
-						<li>utiliser une grille de représentation des interactions et des boucles de feedback</li>
-						<li>Comprendre la circularité des processus relationnels dysfonctionnels</li>
-						<li>Adopter une stratégie spécifique d’amélioration de la situation</li>
-					</ul>
 					<hr/>
 
 					<div>
@@ -946,7 +937,7 @@ Mon but est d'accompagner tout le monde afin d’élever le niveau.
 					<hr/>
 					<p style="text-align: justify">Vous avez déjà entendu parler de Facilitation Graphique, Sketchnoting, Scribing, Facilitation Visuelle, Mindmapping, Pensée Visuelle, etc., et vous êtes perdus ?</p>
 					<p style="text-align: justify">Vous avez décidé de vous mettre à la Facilitation Graphique mais vous avez le syndrome de la page blanche ?</p><p>Alors cet atelier est fait pour vous !</p>
-					<p style="text-align: justify">\"Seul on va plus vite, ensemble on va plus loin\", ensemble nous allons imaginer comment intégrer la Facilitation Graphique dans notre quotidien : à la maison, au travail, dans vos activités préférées... Pour enfin se lancer et ne plus s'arrêter !</p>
+					<p style="text-align: justify">"Seul on va plus vite, ensemble on va plus loin", ensemble nous allons imaginer comment intégrer la Facilitation Graphique dans notre quotidien : à la maison, au travail, dans vos activités préférées... Pour enfin se lancer et ne plus s'arrêter !</p>
 					<p style="text-align: justify">Après un rappel des bases et principes, nous alternerons travail par petits groupes et échanges avec le collectif pour faire émerger des idées et imaginer ensemble comment intégrer la Facilitation Graphique dans notre quotidien.</p>
 					<hr/>
 
