Deux de plus le vendredi matin

--- a/tests/vendredi_v2.html
+++ b/tests/vendredi_v2.html
@@ -308,7 +308,7 @@
 					<div>
 						<div class="debut heure">10h30</div>
 						<div class="salle heure">S5</div>
-						<a href="https://app.klaxoon.com/userspace/networks/appel-a-orateurs-agile-tour-rennes-2019/articles/la-collaboration-plus-que-la-negociation-contractuelle-en-vrai">
+						<a href="#" class="portfolio-link" data-toggle="modal" data-target="#modal-la-collaboration-plus-que-la-negociation-contractuelle-en-vrai">
 							<div class="parent grid-item--height3">
 								<div class="enfant">
 									<h3>La collaboration plus que la négociation contractuelle, en vrai :)</h3>
@@ -327,7 +327,7 @@
 					<div>
 						<div class="debut heure">11h30</div>
 						<div class="salle heure">GC</div>
-						<a href="https://app.klaxoon.com/userspace/networks/appel-a-orateurs-agile-tour-rennes-2019/articles/la-question-du-sens-nous-fait-elle-toucher-les-limites-du-raisonnement">
+						<a href="#" class="portfolio-link" data-toggle="modal" data-target="#modal-la-question-du-sens-nous-fait-elle-toucher-les-limites-du-raisonnement">
 							<div class="parent grid-item--height3">
 								<div class="enfant">
 									<h3>La question du sens nous fait-elle toucher les limites du raisonnement ?</h3>
@@ -940,7 +940,6 @@ Mon but est d'accompagner tout le monde afin d’élever le niveau.
 					<p style="text-align: justify">"Seul on va plus vite, ensemble on va plus loin", ensemble nous allons imaginer comment intégrer la Facilitation Graphique dans notre quotidien : à la maison, au travail, dans vos activités préférées... Pour enfin se lancer et ne plus s'arrêter !</p>
 					<p style="text-align: justify">Après un rappel des bases et principes, nous alternerons travail par petits groupes et échanges avec le collectif pour faire émerger des idées et imaginer ensemble comment intégrer la Facilitation Graphique dans notre quotidien.</p>
 					<hr/>
-
 					<div>
 						<img src="orateurs/fany.jpg" style="height:8rem"/>
 						Fany Berthelot - <a href="https://twitter.com/Fanyberthelot">@Fanyberthelot</a>
@@ -964,6 +963,109 @@ J’organise et anime des ateliers sur la facilitation graphique, j’ai partici
 					<hr/>
 					<p style="text-align: justify">
 						Ensemble, nous co-animons depuis 2 ans des ateliers autour de la Facilitation Graphique, nous avons participé à Agile Laval en tant qu'animatrices et scribeuses et notre objectif est de rendre la facilitation graphique accessible à tous :)
+					</p>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<div class="modal fade" id="modal-la-collaboration-plus-que-la-negociation-contractuelle-en-vrai" tabindex="-1" role="dialog" aria-labelledby="#modal-la-collaboration-plus-que-la-negociation-contractuelle-en-vrai-label"
+		 aria-hidden="true">
+		<div class="modal-dialog modal-lg" role="document">
+			<div class="modal-content">
+				<div class="modal-body">
+					<div style="display: flex; justify-content: space-between">
+						<h2>La collaboration plus que la négociation contractuelle, en vrai :)</h2>
+						<a href="#" data-dismiss="modal">X</a>
+					</div>
+					<hr/>
+					<div style="display:flex">
+						<div class="RE" style="width:2rem">&nbsp;</div>
+						<div style="margin-left:1rem">Retour d'expérience</div>
+					</div>
+					<hr/>
+					<p style="text-align: justify">
+						La performance collective dans un contexte client/fournisseur, vous y croyez ?
+						<br/>
+						Nous oui :)
+						<br/>
+						Nous souhaitons vous raconter l’histoire de notre projet de son démarrage avec Scrum il y a 10 ans à sa transformation technique aujourd’hui au travers de nos expériences de client et de fournisseur.
+						<br/>
+						Nous aborderons nos réussites et nos difficultés au travers de thèmes tel que Scrum et Kanban, Story Map et UAT, Teambuilding et Serious game.
+					</p>
+					<hr/>
+					<div>
+						<img src="orateurs/marceau-loutrel.jpg" style="height:8rem"/>
+						Marceau Loutrel
+					</div>
+					<br/>
+					<p style="text-align: justify">
+						Intégré au sein d’un groupe national de télécommunications depuis 15 ans, j’ai connu l’émergence de l’agilité au sein de nos organisations.
+						<br/>
+						J’ai occupé successivement dans ce contexte plusieurs rôles, acteur du suivi opérationnel, business analyst, product owner et responsable d’application avec la volonté de toujours conserver un fort niveau d’agilité malgré les contraintes d’organisation.
+						<br/>
+						Je suis persuadé que l’agilité n’est pas qu’une collection d’outils mais surtout le développement d’un état d’esprit permettant une atteinte facilitée de nos objectifs.
+						<br/>
+						Je souhaiterai partager avec vous le retour d’expérience de sa mise en œuvre, ayant contribué au succès de notre projet.
+					</p>
+					<hr/>
+					<div>
+						<img src="orateurs/nicolas-arhan.jpg" style="height:8rem"/>
+						Nicolas Arhan
+					</div>
+					<br/>
+					<p style="text-align: justify">
+						Développeur, support opérationnel, Scrum Master, ... : depuis 7 ans chez Sopra Steria, je change régulièrement de casquette sans jamais quitter l'Agilité.
+						<br/>
+						J'accompagne aujourd'hui une équipe dans sa transformation et notamment dans son passage à l'échelle.
+						<br/>
+						Formations, sensibilisation, serious game et ateliers. C'est avec beaucoup d'enthousiasme que je partage ou facilite auprès d'autres équipes.
+						<br/>
+						Passionné de tous les thèmes qui gravitent autour de l'Agilité, j'aurai plaisir à partager avec vous le retour d'expérience du projet sur lequel j'ai le plus expérimenté.
+					</p>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<div class="modal fade" id="modal-la-question-du-sens-nous-fait-elle-toucher-les-limites-du-raisonnement" tabindex="-1" role="dialog" aria-labelledby="#modal-la-question-du-sens-nous-fait-elle-toucher-les-limites-du-raisonnement-label"
+		 aria-hidden="true">
+		<div class="modal-dialog modal-lg" role="document">
+			<div class="modal-content">
+				<div class="modal-body">
+					<div style="display: flex; justify-content: space-between">
+						<h2>La question du sens nous fait-elle toucher les limites du raisonnement ?</h2>
+						<a href="#" data-dismiss="modal">X</a>
+					</div>
+					<hr/>
+					<div style="display:flex">
+						<div class="CF" style="width:2rem">&nbsp;</div>
+						<div style="margin-left:1rem">Conférence</div>
+					</div>
+					<hr/>
+					<p style="text-align: justify">
+						Vous est-il déjà arrivé de parler du sens de la vie avec un chaman ? Vous pourriez être surpris de sa réponse car pour un chaman cette question n’a pas de sens.  Il ne la comprend pas et il ne comprend pas non plus comment nous pouvons nous la poser. Pour eux, être est le sens. Il n’y a rien d’autre.
+						<br/>
+						<br/>
+						Pourtant, nous sommes bien confrontés à cette question du sens dès qu’il s’agit de fédérer des équipes autour d’une performance collective. Quel sens ?  Comment « donner du sens » ?
+						<br/>
+						<br/>
+						Saint Exupéry disait poétiquement : « Si tu veux construire un bateau, ne rassemble pas tes hommes et femmes pour leur donner des ordres, pour expliquer chaque détail, pour leur dire où trouver chaque chose… Si tu veux construire un bateau, fais naître dans le cœur de tes hommes et femmes le désir de la mer. »
+						<br/>
+						<br/>
+						Et si cette question du sens faisait plus appel à notre cœur qu’à notre tête ?  Si l’enjeu c’était plus de résonner que de raisonner ?
+					</p>
+					<hr/>
+					<div>
+						<img src="orateurs/sylvie_le_bail.png" style="height:8rem"/>
+						Sylvie Le Bail - <a href="https://twitter.com/SylvieLEBAIL">@SylvieLEBAIL</a>
+					</div>
+					<br/>
+					<p style="text-align: justify">
+						J’ai eu la chance de participer à des aventures humaines au sein de sociétés en croissance et j’ai aimé ces aventures. J’ai toujours été passionnée par deux questions : comment trouver sa place au sein de l’entreprise & comment créer un collectif performant ? Aujourd’hui, j’accompagne les individus et les organisations à trouver leurs propres réponses à ces deux questions. »
+						<br/>
+						<br/>
+						Ingénieur, diplômée d’école de commerce et coach certifiée, j’ai évolué dans l’entreprise à des postes de marketing, communication et RH.   J’ai choisi l’approche Coach and Team pour me former au coaching.
 					</p>
 				</div>
 			</div>
