Talks vendredi matin ok

--- a/tests/vendredi_v2.html
+++ b/tests/vendredi_v2.html
@@ -342,7 +342,7 @@
 					<div>
 						<div class="debut heure">11h30</div>
 						<div class="salle heure">S1</div>
-						<a href="https://app.klaxoon.com/userspace/networks/appel-a-orateurs-agile-tour-rennes-2019/articles/reconcilier-it-marketing-ou-comment-la-fille-de-la-comm-a-rejoint-une-esn">
+						<a href="#" class="portfolio-link" data-toggle="modal" data-target="#modal-reconcilier-it-marketing-ou-comment-la-fille-de-la-comm-a-rejoint-une-esn">
 							<div class="parent grid-item--height3">
 								<div class="enfant">
 									<h3>Réconcilier IT &amp; Marketing, ou comment la fille de la Comm' a rejoint un ESN</h3>
@@ -357,7 +357,7 @@
 					<div>
 						<div class="debut heure">11h30</div>
 						<div class="salle heure">S2</div>
-						<a href="https://app.klaxoon.com/userspace/networks/appel-a-orateurs-agile-tour-rennes-2019/articles/ameliorer-son-feedback-exemple-en-revue-de-code">
+						<a href="#" class="portfolio-link" data-toggle="modal" data-target="#modal-ameliorer-son-feedback-exemple-en-revue-de-code">
 							<div class="parent grid-item--height3">
 								<div class="enfant">
 									<h3>Améliorer son feedback, exemple en revue de code</h3>
@@ -372,7 +372,7 @@
 					<div>
 						<div class="debut heure">11h30</div>
 						<div class="salle heure">S5</div>
-						<a href="https://app.klaxoon.com/userspace/networks/appel-a-orateurs-agile-tour-rennes-2019/articles/un-cochon-peut-il-etre-agile">
+						<a href="#" class="portfolio-link" data-toggle="modal" data-target="#modal-un-cochon-peut-il-etre-agile">
 							<div class="parent grid-item--height3">
 								<div class="enfant">
 									<h3>Un cochon peut-il être Agile ?</h3>
@@ -1067,6 +1067,115 @@ J’organise et anime des ateliers sur la facilitation graphique, j’ai partici
 						<br/>
 						Ingénieur, diplômée d’école de commerce et coach certifiée, j’ai évolué dans l’entreprise à des postes de marketing, communication et RH.   J’ai choisi l’approche Coach and Team pour me former au coaching.
 					</p>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<div class="modal fade" id="modal-reconcilier-it-marketing-ou-comment-la-fille-de-la-comm-a-rejoint-une-esn" tabindex="-1" role="dialog" aria-labelledby="#modal-reconcilier-it-marketing-ou-comment-la-fille-de-la-comm-a-rejoint-une-esn-label"
+		 aria-hidden="true">
+		<div class="modal-dialog modal-lg" role="document">
+			<div class="modal-content">
+				<div class="modal-body">
+					<div style="display: flex; justify-content: space-between">
+						<h2>Réconcilier IT & Marketing, ou comment la fille de la Comm’ a rejoint une ESN</h2>
+						<a href="#" data-dismiss="modal">X</a>
+					</div>
+					<hr/>
+					<div style="display:flex">
+						<div class="RE" style="width:2rem">&nbsp;</div>
+						<div style="margin-left:1rem">Retour d'expérience</div>
+					</div>
+					<hr/>
+					<p style="text-align: justify">
+						Bac littéraire. Etudes de langues, communication, marketing, management... Un extra-terrestre parmi les Devs. Et si la performance collective passait surtout par la diversité ? Le métier vs. les équipes IT, une absence totale de communication ou, au mieux, des conflits. Comment se nourrir des forces des uns et des autres, faire de nos biais respectifs des armes... de convergence ?
+<br/><br/>
+						Pourquoi suis-je passée d’une Direction de la Communication (N-2 du DG), à un Centre de Compétences dans une ESN (une ressource parmi 600 autres) ? Pour m’éloigner des travers de la première et rejoindre un univers que je pensais plus Agile.
+<br/><br/>
+						Je peux vous raconter ce que j’ai perdu et ce que j’ai acquis à titre individuel (spoiler alert : aucun regret !) mais j’aimerais aussi, surtout, partager ce que je souhaite, ce en quoi je crois pour que chaque professionnel puisse s’épanouir en se focalisant sur l’essentiel : la valeur apportée à l’utilisateur.
+					</p>
+					<hr/>
+					<div>
+						<img src="orateurs/sara-dufour.jpg" style="height:8rem"/>
+						Sara Dufour - <a href="https://twitter.com/comsaradufour">@comsaradufour</a>
+					</div>
+					<br/>
+					<p style="text-align: justify">
+						J’ai longtemps vécu à l’étranger, et toujours aimé évoluer dans des environnements marqués par la diversité. J'ai démarré dans la Communication et le Marketing, travaillé pour et/ou avec le Commerce, la Qualité, la DSI, les RH et des marques. Outre la valeur qu'elle apporte à l'entreprise et à l'utilisateur, je suis convaincue qu'une démarche "Produit" est un excellent point de départ pour amener une autre manière de travailler, susciter l’engagement de professionnels de différents horizons, favoriser le développement individuel et collectif. C'est celle qui m'a fait (au départ sans le savoir) tomber dans la marmite agile, il n'y a pas si longtemps...  Car finalement, de la production de contenus à la conception logicielle, de la sensibilisation au conseil, de Google Analytics au pilotage d'équipe, il n'y a qu'un pas !
+					</p>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<div class="modal fade" id="modal-ameliorer-son-feedback-exemple-en-revue-de-code" tabindex="-1" role="dialog" aria-labelledby="#modal-ameliorer-son-feedback-exemple-en-revue-de-code-label"
+		 aria-hidden="true">
+		<div class="modal-dialog modal-lg" role="document">
+			<div class="modal-content">
+				<div class="modal-body">
+					<div style="display: flex; justify-content: space-between">
+						<h2>Améliorer son feedback, exemple en revue de code</h2>
+						<a href="#" data-dismiss="modal">X</a>
+					</div>
+					<hr/>
+					<div style="display:flex">
+						<div class="AJ" style="width:2rem">&nbsp;</div>
+						<div style="margin-left:1rem">Atelier / Jeu</div>
+					</div>
+					<hr/>
+					<p style="text-align: justify">
+						Venez découvrir en construisant des animaux en Légo comment améliorer votre façon de donner du feedback en toute circonstance.
+						<br/>
+						L’atelier simulera le cadre d’une revue de code en binôme avec l’objectif de donner un feedback bienveillant et constructif sur ce que votre binôme a produit. Sur le modèle du TDD nous ajouterons à chaque étape des contraintes pour améliorer petit à petit notre façon de donner et recevoir un feedback.
+					</p>
+					<hr/>
+					<div>
+						<img src="orateurs/julien-cime.jpg" style="height:8rem"/>
+						Julien Cime - <a href="https://twitter.com/CimeJulien">@CimeJulien</a>
+					</div>
+					<br/>
+					<p style="text-align: justify">
+						Ancien développeur, agiliste depuis mes débuts, aujourd'hui, je suis coach agile chez Orange. Mes sujets professionnels favoris sont la pédagogie, la communication bienveillante, l'auto-organisation, l'agilité ! J'adore apprendre en m'amusant et développer les compétences des personnes par l'expérimentation et la mise en situation, une occasion d'exprimer ma créativité en créant de nouveaux ateliers/jeux. Mes activités quotidiennes alternent entre formation, facilitation de groupes et accompagnement individuel ou d'équipe dans des changements de culture vers plus d'autonomie, d'intelligence collective ou de mieux être. En dehors du travail, parlez-moi de danse et vous risquez bien de vous retrouver à apprendre l'agilité et la danse en même temps.
+					</p>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<div class="modal fade" id="modal-un-cochon-peut-il-etre-agile" tabindex="-1" role="dialog" aria-labelledby="#modal-un-cochon-peut-il-etre-agile-label"
+		 aria-hidden="true">
+		<div class="modal-dialog modal-lg" role="document">
+			<div class="modal-content">
+				<div class="modal-body">
+					<div style="display: flex; justify-content: space-between">
+						<h2>Un cochon peut-il être Agile ?</h2>
+						<a href="#" data-dismiss="modal">X</a>
+					</div>
+					<hr/>
+					<div style="display:flex">
+						<div class="RE" style="width:2rem">&nbsp;</div>
+						<div style="margin-left:1rem">Retour d'expérience</div>
+					</div>
+					<hr/>
+					<p style="text-align: justify">
+						Est-ce qu'un cochon peut être agile ?
+						<br/><br/>
+						Humm bonne question !
+						<br/><br/>
+						Nous sommes un acteur majeur de la filière porcine et, depuis 2 ans, nous avons mis en place un programme informatique basé sur l'agilité, et cela dans un contexte culture d'entreprise & technologique complexe.
+						<br/><br/>
+						Nous souhaitons vous raconter notre histoire, comment nous avons mis cela en place, les leviers utilisés, nos échecs, nos difficultés, nos succès, les revirements de situation et comment nous sommes passés d'une équipe de 5 personnes à 25 tout en restant efficace.
+						<br/><br/>
+						Alors oui un cochon peut être agile ! Désormais, si vous souhaitez savoir comment nous avons fait, vous savez ce qu'il vous reste à faire !
+					</p>
+					<hr/>
+					<div>
+						Marion Bréan
+					</div>
+					<hr/>
+					<div>
+						Sylvain Le Mauff
+					</div>
 				</div>
 			</div>
 		</div>
