Keynotes vendredi ok

--- a/tests/vendredi_v2.html
+++ b/tests/vendredi_v2.html
@@ -202,11 +202,14 @@
 					<div>
 						<div class="debut heure">9h00</div>
 						<div class="salle heure">GC</div>
-						<div class="parent grid-item--height4">
-							<div class="enfant">
-								<h3>Keynote #1 : LJA</h3>
+						<a href="#" class="portfolio-link" data-toggle="modal" data-target="#modal-keynote-lja">
+							<div class="parent grid-item--height4">
+								<div class="enfant" style="display: flex;align-items: center;">
+									<img src="orateurs/keynoter-lja.jpg" style="height:8rem"/>
+									<h3>Keynote #1 : LJA</h3>
+								</div>
 							</div>
-						</div>
+						</a>
 						<div class="fin heure">10h00</div>
 					</div>
 				</div>
@@ -406,11 +409,14 @@
 					<div>
 						<div class="debut heure">14h00</div>
 						<div class="salle heure">GC</div>
-						<div class="parent grid-item--height4">
-							<div class="enfant">
-								<h3>Keynote #2 : Frédéric LEGUÉDOIS</h3>
+						<a href="#" class="portfolio-link" data-toggle="modal" data-target="#modal-keynote-frederic-leguedois">
+							<div class="parent grid-item--height4">
+								<div class="enfant" style="display: flex;align-items: center;">
+									<img src="orateurs/keynoter-frederic-leguedois.jpg" style="height:8rem"/>
+									<h3>Keynote #2 : Frédéric LEGUÉDOIS</h3>
+								</div>
 							</div>
-						</div>
+						</a>
 						<div class="fin heure">15h00</div>
 					</div>
 				</div>
@@ -741,6 +747,34 @@
 		<button class="bt-infos" type="button" data-toggle="modal" data-target="#infos">
 			<i class="material-icons" style="font-size:3em; color:#ff6600;">info</i>
 		</button>
+	</div>
+
+	<div class="modal fade" id="modal-keynote-lja" tabindex="-1" role="dialog" aria-labelledby="#modal-keynote-lja-label"
+		 aria-hidden="true">
+		<div class="modal-dialog modal-lg" role="document">
+			<div class="modal-content">
+				<div class="modal-body">
+					<div style="display: flex; justify-content: space-between">
+						<h2>Keynote #1 : LJA</h2>
+						<a href="#" data-dismiss="modal">X</a>
+					</div>
+					<hr/>
+					<div style="display:flex">
+						<div class="KN" style="width:2rem">&nbsp;</div>
+						<div style="margin-left:1rem">Keynote</div>
+					</div>
+					<hr/>
+					<div style="display: flex;align-items: center">
+						<img src="orateurs/keynoter-lja.jpg" style="height:8rem"/>
+						<div class="m-2" style="text-align: justify">
+							LJA Sports, c’est la rencontre entre 3 passionnés de sport : Laura, Jannick, et Alexandra.
+							<br/>
+							A travers l’expérience d’Alex et de Laura, joueuses de rugby, sportives de haut niveau, nous intervenons auprès de vos équipes pour partager notre vision du collectif, autour de thèmes forts, que nous expérimentons au quotidien : la place de chacun dans un groupe, la communication entre tous, le droit à l’erreur, le leadership.
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
 	</div>
 
 	<div class="modal fade" id="modal-transformation-agile-arretons-de-suivre-aveuglement-des-frameworks" tabindex="-1" role="dialog" aria-labelledby="#modal-transformation-agile-arretons-de-suivre-aveuglement-des-frameworks-label"
@@ -1175,6 +1209,36 @@ J’organise et anime des ateliers sur la facilitation graphique, j’ai partici
 					<hr/>
 					<div>
 						Sylvain Le Mauff
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<div class="modal fade" id="modal-keynote-frederic-leguedois" tabindex="-1" role="dialog" aria-labelledby="#modal-keynote-frederic-leguedois-label"
+		 aria-hidden="true">
+		<div class="modal-dialog modal-lg" role="document">
+			<div class="modal-content">
+				<div class="modal-body">
+					<div style="display: flex; justify-content: space-between">
+						<h2>Keynote #2 : Frédéric Leguédois</h2>
+						<a href="#" data-dismiss="modal">X</a>
+					</div>
+					<hr/>
+					<div style="display:flex">
+						<div class="KN" style="width:2rem">&nbsp;</div>
+						<div style="margin-left:1rem">Keynote</div>
+					</div>
+					<hr/>
+					<div style="display: flex;align-items: center">
+						<img src="orateurs/keynoter-frederic-leguedois.jpg" style="height:8rem"/>
+						<div class="m-2" style="text-align: justify">
+							Evangéliste Agile, libriste, voire polémiste 😉 Développement logiciel sur mesure chez @CloudTemple. Conférencier iconoclaste. Garanti zéro certification.
+							<br/>
+							Un one man show afin de susciter la réflexion par le rire, afin de vulgariser les valeurs fondamentales de l’agilité, au delà de l’application d’une quelconque méthode.
+							<br/>
+							Cette conférence iconoclaste, non technique, s’adresse à toute personne ayant eu un premier contact avec un projet de développement logiciel (clients, donneurs d’ordre, développeurs,chefs de projet, product owner, scrum master…)
+						</div>
 					</div>
 				</div>
 			</div>
